@@ -26,7 +26,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  
  [MetaProvides::Package]
  [Prereqs::FromCPANfile]
- [Prereqs]
+ [Prereqs / Self_Prereq]
  -phase = develop
  Dist::Zilla::PluginBundle::Author::DBOOK = $VERSION
  
@@ -43,6 +43,7 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  filename = META.json
  filename = Makefile.PL
  [Git::Commit]
+ add_files_in = /
  allow_dirty_match = ^lib/
  allow_dirty = dist.ini
  allow_dirty = Changes
@@ -76,6 +77,16 @@ This is the plugin bundle that DBOOK uses. It is equivalent to:
  [TestRelease]
  [ConfirmRelease]
  [UploadToCPAN]
+
+This bundle assumes that your git repo has the following: a L<cpanfile> with
+the dist's prereqs, a C<Changes> populated for the current version (see
+L<Dist::Zilla::Plugin::NextRelease>), and a C<.gitignore> including
+C<Name-Of-Dist-*> but not C<Makefile.PL> or C<META.json>.
+
+To test releasing, set the env var C<FAKE_RELEASE=1> to run everything except
+the upload to CPAN.
+
+ $ FAKE_RELEASE=1 dzil release
 
 =head1 OPTIONS
 
