@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Git-add files newly created during build
+  - Support FAKE_RELEASE=1 env var
 
 0.005     2015-07-27 10:24:59 EDT
   - Depend on plugins explicitly used
